Have a separate list of libraries with which to link rpcapd.
Don't add stuff to PCAP_LINK_LIBRARIES if it's used for rpcapd but not
needed for libpcap; have a separate RPCAPD_LINK_LIBRARIES variable for
the libraries with which to link rpcapd but not libpcap.

--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -2,7 +2,7 @@ set(CMAKE_THREAD_PREFER_PTHREAD 1)
 if(NOT MSVC)
   find_package(Threads REQUIRED)
   if(CMAKE_USE_PTHREADS_INIT)
-    set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+    set(RPCAPD_LINK_LIBRARIES ${RPCAPD_LINK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
   else(CMAKE_USE_PTHREADS_INIT)
     message(WARNING "Pthreads not found. Won't be able to build rpcapd.")
   endif(CMAKE_USE_PTHREADS_INIT)
@@ -12,7 +12,7 @@ else(NOT MSVC)
 # instead of the standard FindThreads.cmake
   find_package(Pthreads-w32 REQUIRED) 
   if(PTHREADS_FOUND)
-    set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} ${PTHREADS_LIBRARY})
+    set(RPCAPD_LINK_LIBRARIES ${RPCAPD_LINK_LIBRARIES} ${PTHREADS_LIBRARY})
     include_directories(${PTHREADS_INCLUDE_DIR})
   else(PTHREADS_FOUND)
     message(WARNING "Pthreads not found. Won't be able to build rpcapd.")
@@ -26,7 +26,7 @@ if(UNIX)
   else(HAVE_CRYPT_IN_SYSTEM_LIBRARIES)
     check_library_exists(crypt crypt "" HAVE_CRYPT_IN_LIBCRYPT)
     if(HAVE_CRYPT_IN_LIBCRYPT)
-      set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} crypt)
+      set(RPCAPD_LINK_LIBRARIES ${RPCAPD_LINK_LIBRARIES} crypt)
       set(HAVE_CRYPT TRUE)
     else(HAVE_CRYPT_IN_LIBCRYPT)
       message(WARNING "crypt() not found. Won't be able to build rpcapd.")
@@ -60,7 +60,8 @@ if((CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND) AND (WIN32 OR HAVE_CRYPT))
     ${RPCAPD_EXTRA_SOURCES}
   )
 
-  target_link_libraries(rpcapd ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
+  target_link_libraries(rpcapd ${LIBRARY_NAME}_static
+    ${RPCAPD_LINK_LIBRARIES} ${PCAP_LINK_LIBRARIES})
 
   if(MSVC AND CMAKE_SIZEOF_VOID_P EQUAL 8)
     install(TARGETS rpcapd DESTINATION bin/amd64)
