--- a/Makefile.in
+++ b/Makefile.in
@@ -166,17 +166,6 @@ TESTS = \
 	selpolltest \
 	threadsignaltest
 
-TESTS_SRC = \
-	tests/valgrindtest.c \
-	tests/capturetest.c \
-	tests/can_set_rfmon_test.c \
-	tests/filtertest.c \
-	tests/findalldevstest.c \
-	tests/opentest.c \
-	tests/reactivatetest.c \
-	tests/selpolltest.c \
-	tests/threadsignaltest.c
-
 GENHDR = \
 	scanner.h grammar.h
 
@@ -260,7 +249,6 @@ MANMISC = \
 	pcap-tstamp.manmisc.in
 
 EXTRA_DIST = \
-	$(TESTS_SRC) \
 	CHANGES \
 	ChmodBPF/ChmodBPF \
 	ChmodBPF/StartupParameters.plist \
@@ -384,6 +372,16 @@ EXTRA_DIST = \
 	sockutils.h \
 	scanner.l \
 	tests/CMakeLists.txt \
+	tests/can_set_rfmon_test.c \
+	tests/capturetest.c \
+	tests/filtertest.c \
+	tests/findalldevstest.c \
+	tests/opentest.c \
+	tests/reactivatetest.c \
+	tests/selpolltest.c \
+	tests/threadsignaltest.c \
+	tests/unix.h \
+	tests/valgrindtest.c \
 	Win32/Prj/wpcap.sln \
 	Win32/Prj/wpcap.vcxproj \
 	Win32/Prj/wpcap.vcxproj.filters
