--- a/Makefile.in
+++ b/Makefile.in
@@ -89,6 +89,7 @@ PSRC =	pcap-@V_PCAP@.c @USB_SRC@ @BT_SRC@ @BT_MONITOR_SRC@ @NETFILTER_SRC@ @DBUS
 FSRC =  @V_FINDALLDEVS@
 SSRC =  @SSRC@
 CSRC =	pcap.c gencode.c optimize.c nametoaddr.c etherent.c \
+	fmtutils.c \
 	savefile.c sf-pcap.c sf-pcap-ng.c fopen.c pcap-common.c \
 	bpf_image.c bpf_dump.c
 GENSRC = scanner.c grammar.c bpf_filter.c
@@ -123,6 +124,7 @@ HDR = $(PUBHDR) \
 	atmuni31.h \
 	ethertype.h \
 	extract.h \
+	fmtutils.h \
 	fopen.h \
 	ftmacros.h \
 	gencode.h \
