--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -38,6 +38,9 @@ if(WIN32 OR ((CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND) AND HAVE_CRYPT))
     ${RPCAPD_EXTRA_SOURCES}
   )
 
+  set_target_properties(rpcapd PROPERTIES
+    COMPILE_OPTIONS "${C_ADDITIONAL_FLAGS}")
+
   target_link_libraries(rpcapd ${LIBRARY_NAME}_static
     ${RPCAPD_LINK_LIBRARIES} ${PCAP_LINK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
