--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,8 @@ add_custom_target(tests)
 macro(add_test_executable _executable)
   add_executable(${_executable} EXCLUDE_FROM_ALL
     ${_executable}.c ${PROJECT_SOURCE_LIST_WIN32_C})
+  set_target_properties(${_executable} PROPERTIES
+    COMPILE_OPTIONS "${C_ADDITIONAL_FLAGS}")
   target_link_libraries(${_executable}
     ${ARGN} ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
   add_dependencies(tests ${_executable})
