Use compiler tests to determine how to define _U_.
One less thing that has to be done in autotools and CMake.

--- a/Makefile.in
+++ b/Makefile.in
@@ -155,7 +155,8 @@ HDR = $(PUBHDR) \
 	rpcapd/win32-svc.h \
 	sf-pcap.h \
 	sf-pcap-ng.h \
-	sunatmpos.h
+	sunatmpos.h \
+	varattrs.h
 
 TESTS = \
 	@VALGRINDTEST@ \
