In some older Solarises, link with even more libraries.
On Solaris, we have to link with -lxnet to get a version of recvmsg()
that will tell the caller if a datagram was truncated.  However, on some
older Solarises, we have to link with -lsocket and -lnsl to get
inet_ntop() and inet_pton(), so link those test programs that use those
routines with -lxnet *and* -lsocket and -lnsl if necessary.

(We don't worry about those older systems with CMake.)

--- a/Makefile.in
+++ b/Makefile.in
@@ -66,6 +66,7 @@ PTHREAD_LIBS=@PTHREAD_LIBS@
 BUILD_RPCAPD=@BUILD_RPCAPD@
 INSTALL_RPCAPD=@INSTALL_RPCAPD@
 RPCAPD_LIBS=@RPCAPD_LIBS@
+EXTRA_NETWORK_LIBS=@EXTRA_NETWORK_LIBS@
 
 # Standard CFLAGS
 FULL_CFLAGS = $(CCOPT) $(INCLS) $(DEFS) $(CFLAGS)
@@ -552,10 +553,10 @@ can_set_rfmon_test: tests/can_set_rfmon_test.c libpcap.a
 	$(CC) $(FULL_CFLAGS) -I. -L. -o can_set_rfmon_test $(srcdir)/tests/can_set_rfmon_test.c libpcap.a $(LIBS)
 
 filtertest: tests/filtertest.c libpcap.a
-	$(CC) $(FULL_CFLAGS) -I. -L. -o filtertest $(srcdir)/tests/filtertest.c libpcap.a $(LIBS)
+	$(CC) $(FULL_CFLAGS) -I. -L. -o filtertest $(srcdir)/tests/filtertest.c libpcap.a $(EXTRA_NETWORK_LIBS) $(LIBS)
 
 findalldevstest: tests/findalldevstest.c libpcap.a
-	$(CC) $(FULL_CFLAGS) -I. -L. -o findalldevstest $(srcdir)/tests/findalldevstest.c libpcap.a $(LIBS)
+	$(CC) $(FULL_CFLAGS) -I. -L. -o findalldevstest $(srcdir)/tests/findalldevstest.c libpcap.a $(EXTRA_NETWORK_LIBS) $(LIBS)
 
 opentest: tests/opentest.c libpcap.a
 	$(CC) $(FULL_CFLAGS) -I. -L. -o opentest $(srcdir)/tests/opentest.c libpcap.a $(LIBS)
