Fix "make depend" in rpcapd if we can't generate dependencies.
Have a "nomkdep" script that does nothing, and run it, rather than using
the built-in ":" command.  That way, in the rpcapd directory, we don't
try to run ../: and fail, we try to run ../nomkdep and succeed.

--- a/Makefile.in
+++ b/Makefile.in
@@ -325,6 +325,7 @@ EXTRA_DIST = \
 	msdos/pktdrvr.c \
 	msdos/pktdrvr.h \
 	msdos/readme.dos \
+	nomkdep \
 	org.tcpdump.chmod_bpf.plist \
 	pcap-bpf.c \
 	pcap-bt-linux.c \
