Fix arguments used when building rpcapd.
Don't pass $(CCOPT) (which has options specific to building object files
that might be put into a shared library), $(INCLS) (-I flags, not
relevant when linking), or $(DEFS) (-D flags, not relevant when linking)
when building rpcapd.

Do, however, pass LDFLAGS.

--- a/rpcapd/Makefile.in
+++ b/rpcapd/Makefile.in
@@ -103,7 +103,7 @@ EXTRA_DIST = \
 	Makefile-devel-adds
 
 rpcapd: $(OBJ) ../libpcap.a
-	$(CC) $(LDFLAGS) -o $@ $(OBJ) ../libpcap.a $(LIBS) $(RPCAPD_LIBS)
+	$(CC) $(CCOPT) $(CFLAGS) $(LDFLAGS) -o $@ $(OBJ) ../libpcap.a $(LIBS) $(RPCAPD_LIBS)
 clean:
 	rm -f $(CLEANFILES)
 
