Only build libpcap library files with shared-library compile flags.
Executables don't need to be, and shouldn't be, built with those flags.

--- a/configure.ac
+++ b/configure.ac
@@ -1748,6 +1748,7 @@ AC_SUBST(V_FINDALLDEVS)
 AC_SUBST(V_INCLS)
 AC_SUBST(V_LEX)
 AC_SUBST(V_PCAP)
+AC_SUBST(V_SHLIB_CCOPT)
 AC_SUBST(V_SHLIB_CMD)
 AC_SUBST(V_SHLIB_OPT)
 AC_SUBST(V_SONAME_OPT)
