We're building rpcap, not libpcap, so don't compile with -DBUILDING_PCAP.

--- a/rpcapd/Makefile.in
+++ b/rpcapd/Makefile.in
@@ -51,7 +51,7 @@ LN_S = @LN_S@
 MKDEP = @MKDEP@
 CCOPT = @V_CCOPT@
 INCLS = -I. -I.. -I@srcdir@ -I@srcdir@/.. @V_INCLS@
-DEFS = -DBUILDING_PCAP @DEFS@ @V_DEFS@
+DEFS = @DEFS@ @V_DEFS@
 ADDLOBJS = @ADDLOBJS@
 ADDLARCHIVEOBJS = @ADDLARCHIVEOBJS@
 LIBS = @LIBS@
