Fix linking with the pthread library.
Define PTHREAD_LIBS in both the rpcapd and tests Makefile.in files

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -55,6 +55,7 @@ DEFS = @DEFS@ @V_DEFS@
 ADDLOBJS = @ADDLOBJS@
 ADDLARCHIVEOBJS = @ADDLARCHIVEOBJS@
 LIBS = @LIBS@
+PTHREAD_LIBS = @PTHREAD_LIBS@
 CROSSFLAGS=
 CFLAGS = @CFLAGS@   ${CROSSFLAGS}
 LDFLAGS = @LDFLAGS@ ${CROSSFLAGS}
