--- a/rpcapd/Makefile.in
+++ b/rpcapd/Makefile.in
@@ -55,6 +55,7 @@ DEFS = @DEFS@ @V_DEFS@
 ADDLOBJS = @ADDLOBJS@
 ADDLARCHIVEOBJS = @ADDLARCHIVEOBJS@
 LIBS = @LIBS@
+PTHREAD_LIBS = @PTHREAD_LIBS@
 CROSSFLAGS=
 CFLAGS = @CFLAGS@   ${CROSSFLAGS}
 LDFLAGS = @LDFLAGS@ ${CROSSFLAGS}
@@ -62,7 +63,7 @@ DYEXT = @DYEXT@
 V_RPATH_OPT = @V_RPATH_OPT@
 DEPENDENCY_CFLAG = @DEPENDENCY_CFLAG@
 PROG=libpcap
-RPCAPD_LIBS = @RPCAPD_LIBS@ @PTHREAD_LIBS@
+RPCAPD_LIBS = @RPCAPD_LIBS@
 
 # Standard CFLAGS
 FULL_CFLAGS = $(CCOPT) $(INCLS) $(DEFS) $(CFLAGS)
@@ -96,7 +97,7 @@ CLEANFILES = $(OBJ) rpcapd
 MAN8 =
 
 rpcapd: $(OBJ) ../libpcap.a
-	$(CC) $(CCOPT) $(CFLAGS) $(LDFLAGS) -o $@ $(OBJ) ../libpcap.a $(LIBS) $(RPCAPD_LIBS)
+	$(CC) $(CCOPT) $(CFLAGS) $(LDFLAGS) -o $@ $(OBJ) ../libpcap.a $(LIBS) $(RPCAPD_LIBS $(PTHREAD_LIBS))
 clean:
 	rm -f $(CLEANFILES)
 
