--- a/rpcapd/CMakeLists.txt
+++ b/rpcapd/CMakeLists.txt
@@ -25,8 +25,8 @@ if(WIN32 OR ((CMAKE_USE_PTHREADS_INIT OR PTHREADS_FOUND) AND HAVE_CRYPT))
   endif(UNIX)
 
   if(WIN32)
-    set(RPCAPD_EXTRA_SOURCES win32-svc.c getopt.c rpcapd.rc)
-    include_directories(${pcap_SOURCE_DIR}/rpcapd)
+    set(RPCAPD_EXTRA_SOURCES win32-svc.c ${pcap_SOURCE_DIR}/missing/getopt.c rpcapd.rc)
+    include_directories(${pcap_SOURCE_DIR}/rpcapd ${pcap_SOURCE_DIR}/missing)
   endif(WIN32)
 
   add_executable(rpcapd
