--- a/rpcapd/Makefile.in
+++ b/rpcapd/Makefile.in
@@ -84,7 +84,7 @@ SRC =	daemon.c \
 	log-stderr.c \
 	rpcapd.c
 
-OBJ =	$(SRC:.c=.o) ../rpcap-protocol.o
+OBJ =	$(SRC:.c=.o) ../rpcap-protocol.o ../sockutils.o
 PUBHDR =
 
 HDR = $(PUBHDR) log.h
