Link the tests with the shared pcap on Windows.
WinPcap never shipped a static pcap library, and if you *do* ship a
static pcap library, I'm not sure how you would distinguish it from the
import library for the dynamic pcap library.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,13 @@ macro(add_test_executable _executable)
     ${_executable}.c ${PROJECT_SOURCE_LIST_WIN32_C})
   set_target_properties(${_executable} PROPERTIES
     COMPILE_OPTIONS "${C_ADDITIONAL_FLAGS}")
-  target_link_libraries(${_executable}
-    ${ARGN} ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
+  if(WIN32)
+    target_link_libraries(${_executable}
+      ${ARGN} ${LIBRARY_NAME} ${PCAP_LINK_LIBRARIES})
+  else(WIN32)
+    target_link_libraries(${_executable}
+      ${ARGN} ${LIBRARY_NAME}_static ${PCAP_LINK_LIBRARIES})
+  endif(WIN32)
   add_dependencies(tests ${_executable})
 endmacro()
 
