Use pcap_EXPORTS rather than BUILDING_PCAP to control export/import in headers.
CMake automatically defines pcap_EXPORTS, so we don't have to define
anything ourselves.  Define it with autotools as well.

--- a/Makefile.in
+++ b/Makefile.in
@@ -52,7 +52,7 @@ MKDEP = @MKDEP@
 CCOPT = @V_CCOPT@
 SHLIB_CCOPT = @V_SHLIB_CCOPT@
 INCLS = -I. @V_INCLS@
-DEFS = -DBUILDING_PCAP @DEFS@ @V_DEFS@
+DEFS = -Dpcap_EXPORTS @DEFS@ @V_DEFS@
 ADDLOBJS = @ADDLOBJS@
 ADDLARCHIVEOBJS = @ADDLARCHIVEOBJS@
 LIBS = @LIBS@
