Fix mkdep invocations.
CC is not guaranteed to be space-free; quote it.

DEPENDENCY_CFLAG is also not guaranteed to be space-free; quote it.
It's supposed to be passed to mkdep as the argument to the -m flag; pass
it as that argument.

--- a/Makefile.in
+++ b/Makefile.in
@@ -747,6 +747,6 @@ releasetar:
 	   rm -rf $$name
 
 depend:	$(GENSRC) $(GENHDR) bpf_filter.c
-	$(MKDEP) -c $(CC) -m $(CFLAGS) $(DEPENDENCY_CFLAG) $(DEFS) $(INCLS) $(SRC)
+	$(MKDEP) -c "$(CC)" -m "$(DEPENDENCY_CFLAG)" $(CFLAGS) $(DEFS) $(INCLS) $(SRC)
 	cd rpcapd; $(MAKE) depend
 	cd tests; $(MAKE) depend
