Fix checks for thread-safe strerror variants.
With autotools, check for strerror_s(), just in case it's used on
Windows.

With CMake, add HAVE_STRERROR_R and HAVE_STRERROR_S to cmakeconfig.h.in.

--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -165,6 +165,12 @@
 /* Define to 1 if you have the `strerror' function. */
 #cmakedefine HAVE_STRERROR 1
 
+/* Define to 1 if you have the `strerror_r' function. */
+#cmakedefine HAVE_STRERROR_R 1
+
+/* Define to 1 if you have the `strerror_s' function. */
+#cmakedefine HAVE_STRERROR_S 1
+
 /* Define to 1 if you have the <strings.h> header file. */
 #cmakedefine HAVE_STRINGS_H 1
 
