--- a/configure.ac
+++ b/configure.ac
@@ -84,7 +84,7 @@ esac
 
 AC_LBL_FIXINCLUDES
 
-AC_CHECK_FUNCS(strerror strerror_r strlcpy strlcat)
+AC_CHECK_FUNCS(strerror strerror_r strerror_s strlcpy strlcat)
 
 needsnprintf=no
 AC_CHECK_FUNCS(vsnprintf snprintf,,
